# researchAssistance

./: .env.example  .gitignore  README.en.md  README.ja.md  README.md  main.py  plan.md  pyproject.toml  research.md  run_app.bat  run_app.sh  stop_app.bat  stop_app.sh  uix.md
docs/superpowers/specs/: 2026-04-20-ui-redesign-design.md
scratch/: regenerate_graph.py  test_tools.py
scripts/: test_ollama.py
src/: config.py  main.py
src/agents/: graph.py  graph_builder.py  outline_agent.py  parse_agent.py  review_agent.py  search_agent.py  state.py  synthesis_agent.py  wiki_agent.py
src/core/: llm.py  logger.py
src/knowledge/: entity_extractor.py  graph_reporter.py  graph_store.py
src/tools/: arxiv_tool.py  obsidian_writer.py  semantic_scholar.py
src/ui/: gradio_app.py
src/ui/components/: action_log.py  idea_thrower.py  knowledge_canvas.py
vault/output/: graph.html  graph_data.json
